--- a/src/resources/styl/style.styl
+++ b/src/resources/styl/style.styl
@@ -1,3 +1,12 @@
+*
+    margin 0
+    padding 0
+
+body
+    width 100%
+
+@require 'header'
+
 html 
     line-height 1.5
     font-family "Roboto", sans-serif
@@ -16,12 +25,3 @@ html
     html
         font-size 15px
 
-.header-logo    
-    width 4rem
-    height 4rem
-    background-repeat no-repeat
-    background-size cover
-    background-position unset
-    display inline-block
-    left 0
-    cursor pointer
