--- a/src/resources/styl/header.styl
+++ b/src/resources/styl/header.styl
@@ -20,3 +20,9 @@ header
         div:not(:first-child)
             display: inline-block
             padding-left: 10px
+
+
+.hero.is-info
+    .hero-body.is-little
+        padding 1rem 1.5rem
+        text-align: center
