--- a/src/resources/styl/table-cell.styl
+++ b/src/resources/styl/table-cell.styl
@@ -2,6 +2,7 @@ td.cell
     text-align center
     vertical-align: middle
     padding: 0 !important 
+    vertical-align: middle !important
         
 .subject
     font-weight: bold
@@ -36,3 +37,8 @@ td.cell
     color rgba(0,0,0,0.6)
     font-size: 0.8rem
     margin-bottom 5px
+
+.horizontal-and-vertical-centering 
+    display: flex
+    justify-content: center
+    align-items: center
