--- a/src/resources/styl/style.styl
+++ b/src/resources/styl/style.styl
@@ -1,3 +1,6 @@
+html
+    overflow-x: scroll !important
+
 .subtitle.rotated
     width: 200px
     text-align: center
@@ -19,3 +22,8 @@
     width: 100%
     height: 20px
     background-color: #209cee
+    &:last-child
+        height 0px
+
+.hero.is-info
+    min-width 50px
