--- a/src/resources/styl/style.styl
+++ b/src/resources/styl/style.styl
@@ -1,27 +1,27 @@
-// .subtitle.rotated
-//     width: 200px
-//     text-align: center
-//     margin: auto auto
-//     transform: translateX(-80px) rotate(-90deg);
+.subtitle.rotated
+    width: 200px
+    text-align: center
+    margin: auto auto
+    transform: translateX(-80px) rotate(-90deg);
 
-// .my-flex-container
-//     display: flex
+.my-flex-container
+    display: flex
 
-// .my-flexbox-child-table
-//     width: calc(100% - 50px);
-//     margin-bottom: 1px !important
+.my-flexbox-child-table
+    width: calc(100% - 50px);
+    margin-bottom: 1px !important
 
-// .my-flexbox-child-title
-//     width: 50px
-//     overflow hidden
+.my-flexbox-child-title
+    width: 50px
+    overflow hidden
 
-// .bottom-line
-//     width: 100%
-//     height: 20px
-//     background-color: #209cee
-//     &:last-child
-//         height 0px
+.bottom-line
+    width: 100%
+    height: 20px
+    background-color: #209cee
+    &:last-child
+        height 0px
 
-// .hero.is-info
-//     min-width 50px
+.hero.is-info
+    min-width 50px
 
